add stuff on mindfulness

--- a/_drafts/2020-9-15-blog-post-14.md
+++ b/_drafts/2020-9-15-blog-post-14.md
@@ -26,8 +26,6 @@ When you're thinking about when am I going to get relief, what's the cure, how b
 > Mindfulness tells us to focus on the present, allowing us to realize that the half-life of negative emotions is incredibly short.
 
 
-A lot of pain and negative emotions are j
-
 
 Cooking
 ------
@@ -47,7 +45,13 @@ Closing
 ------
 
 
+
 Songs
 ------
 
+Youtubers
+------
+- [Captain Sinbad](https://www.youtube.com/channel/UC8XKyvQ5Ne_bvYbgv8LaIeg)
+- [bald and bankrupt](https://www.youtube.com/watch?v=madplgRfebo&t=352s)
+- [serpentza](https://www.youtube.com/user/serpentza)
 
