--- a/_drafts/2020-9-15-blog-post-14.md
+++ b/_drafts/2020-9-15-blog-post-14.md
@@ -22,7 +22,7 @@ It hasn't become obvious to me what the goal of mindfulness is exactly. Sam Harr
 > When you are not mindful, you are lost in thought. The contents of your thoughts color your moment-to-moment experience, and you identify with and become your thoughts. All suffering is a matter of being lost in thought.
 > Mindfulness teaches you to aware of thoughts for what they are and to experience life in the present moment. You do not need to ruminate about what just happened, what should happen, or what might yet happen. It allows us to break the spell of being lost in thought.
 > As an example of how being lost in thought compounds negative experience, imagine someone driving a nail into your knee. It sounds unbearable, but every moment you feel it, you are actually bearing it. 
-When you're thinking about when am I going to get relief, what's the cure, how badly is my knee injured---when you're worrying about the future---, the automaticity of thought amplifies the negativity of the experience. Realize that suffering is the constant fear of having to experience something in the next moment.  
+When you're thinking about when am I going to get relief, what's the cure, how badly is my knee injured---when you're worrying about the future---, the automaticity of thought amplifies the negativity of the experience. Realize that suffering is the constant fear of having to experience something in the next moment.
 > Mindfulness tells us to focus on the present, allowing us to realize that the half-life of negative emotions is incredibly short.
 
 
@@ -35,11 +35,12 @@ Reading
 
 Making videos
 ------
-* Reviewing notes from my previous notebook
+* [Reviewing](https://www.youtube.com/watch?v=FcAK86N9j0Q) notes from my personal notebook (2017-2018)
+* Piano
+* Acting
 
 Who are my heroes?
 ------
-* 
 
 Closing
 ------
@@ -54,4 +55,5 @@ Youtubers
 - [Captain Sinbad](https://www.youtube.com/channel/UC8XKyvQ5Ne_bvYbgv8LaIeg)
 - [bald and bankrupt](https://www.youtube.com/watch?v=madplgRfebo&t=352s)
 - [serpentza](https://www.youtube.com/user/serpentza)
+* [Andrew Kirby](https://www.youtube.com/watch?v=q_xm5Weu3nE)
 
