--- a/_drafts/2020-9-15-blog-post-14.md
+++ b/_drafts/2020-9-15-blog-post-14.md
@@ -33,6 +33,25 @@ Cooking
 Reading
 ------
 
+**Positivity by Phil Hellmuth.** Phil advocates for several things, notably:
+1. Write down life goals and create a winning pyramid.
+1. Bathroom mirror your yearly goals and your blessings.
+1. Shed your hate.
+1. Ignore external praise and look to your blessings instead.
+
+Here are my yearly goals (for the next academic year):
+1. Write two \*ACL papers.
+1. Work with a great advisor.
+1. Don't get sick.
+1. Bench press 225 pounds.
+1. Meditate daily.
+
+Blessings:
+1. Great health for me.
+1. Great health for my family.
+1. Freedom to work on what I love.
+
+
 Making videos
 ------
 * [Reviewing](https://www.youtube.com/watch?v=FcAK86N9j0Q) notes from my personal notebook (2017-2018)
