--- a/_drafts/2020-9-15-blog-post-14.md
+++ b/_drafts/2020-9-15-blog-post-14.md
@@ -51,6 +51,24 @@ Blessings:
 1. Great health for my family.
 1. Freedom to work on what I love.
 
+**Hygge.** To continue to learn more about my interest in Danish culture, I read two books, *Hygge: Cozy Living the Danish Way* by Astrid Neilson and *The Cozy Life* by Pia Edberg. Here's the definition provided by Neilsen: 
+
+> Hygge is about everyday togetherness that brings about that warm and fuzzy feeling inside. Hygge evokes a homey feeling of warmth, comfort safety, and love.
+
+Neilsen thinks of it as an art, a way of living a simple and authentic life by finding joy in the ordinary. 
+
+Edberg takes an extended and more meta- approach, defining hygge as surrounding ourselves with everything we love and treasuring the current moment. 
+I like how Edberg describes hygge as not like a raging party, but rather a relaxed and cozy gathering with no worrying.
+She also relates hygge to minimalism and urges us to focus on what is important.
+
+Some potential action items for me:
+* Have friends over for hygge gatherings instead of ragers. When they come over, ask if they want to eat or have any food, and have out candles, plants, baked goods, and wine.
+* Hygge at work: add personal items and plants to your desk at work.
+* Hygge scents: cinnamon, vanilla, pumpkin.
+* Some suggested hygge activities: have a bonfire, catch a sunset, have a picnic, take a walk in the snow at night, play board games, write a letter to someone you miss.
+* Reconnecting with the inner child.
+
+"You will never be free until you have no need to impress anyone."
 
 Making videos
 ------
