add atomic habits stuff

--- a/_drafts/2020-9-15-blog-post-14.md
+++ b/_drafts/2020-9-15-blog-post-14.md
@@ -33,23 +33,15 @@ Cooking
 Reading
 ------
 
-**Positivity by Phil Hellmuth.** Phil advocates for several things, notably:
-1. Write down life goals and create a winning pyramid.
-1. Bathroom mirror your yearly goals and your blessings.
-1. Shed your hate.
-1. Ignore external praise and look to your blessings instead.
+**Atomic Habits by James Clear.** 
 
-Here are my yearly goals (for the next academic year):
-1. Write two \*ACL papers.
-1. Work with a great advisor.
-1. Don't get sick.
-1. Bench press 225 pounds.
-1. Meditate daily.
+* Habits are the compound interest of self-improvement.
+"aggregation of marginal gains": improve everything that goes into riding a bike by 1%: wear heated overshorts to maintain ideal muscle temperature, test fabrics in wind tunnel, find massage gels to aid muscle recovery, best way to wash hands and prevent a cold
+* Habits often appear to make no difference until you cross a critical threshold and unlock a new level of performance.
+* Focus on systems instead of goals. E.g., instead of *publish 2 \*ACL papers this year*, try *read 1 new paper a week, try out 10 new ideas, and do 30 hours of deep work per week this year*.
+* Focus on progress and improvement against oneself instead of achieving goals, similar to Simon Sinek's philosophy of playing the infinite game.
 
-Blessings:
-1. Great health for me.
-1. Great health for my family.
-1. Freedom to work on what I love.
+* Most people change habits based on what they want to achieve, leading to outcome-based habits. You really want to have identity-based habits, which target who you want to become. The goal is not to read a book, but rather to *become* a reader. The goal is not to do creative things, but rather to *become* a creative person.
 
 **Hygge.** To continue to learn more about my interest in Danish culture, I read two books, *Hygge: Cozy Living the Danish Way* by Astrid Neilson and *The Cozy Life* by Pia Edberg. Here's the definition provided by Neilsen: 
 
@@ -69,6 +61,24 @@ Some potential action items for me:
 * Reconnecting with the inner child.
 
 "You will never be free until you have no need to impress anyone."
+
+**Positivity by Phil Hellmuth.** Phil advocates for several things, notably:
+1. Write down life goals and create a winning pyramid.
+1. Bathroom mirror your yearly goals and your blessings.
+1. Shed your hate.
+1. Ignore external praise and look to your blessings instead.
+
+Here are my yearly goals (for the next academic year):
+1. Write two \*ACL papers.
+1. Work with a great advisor.
+1. Don't get sick.
+1. Bench press 225 pounds.
+1. Meditate daily.
+
+Blessings:
+1. Great health for me.
+1. Great health for my family.
+1. Freedom to work on what I love.
 
 Making videos
 ------
