--- a/_drafts/2020-9-15-blog-post-14.md
+++ b/_drafts/2020-9-15-blog-post-14.md
@@ -33,15 +33,23 @@ Cooking
 Reading
 ------
 
-**Atomic Habits by James Clear.** 
+***Can't Hurt Me* by David Goggins.** This book is the story of David Goggins, an ultra-marathoner and former US Navy SEAL who did 4,030 pull-ups in 17 hours, a world record. He tells the incredible story how he learned to embrace pain---to build a calloused mind, as he calls it---from being abused by his father to running with two broken shins and becoming a Navy Seal.
 
-* Habits are the compound interest of self-improvement.
-"aggregation of marginal gains": improve everything that goes into riding a bike by 1%: wear heated overshorts to maintain ideal muscle temperature, test fabrics in wind tunnel, find massage gels to aid muscle recovery, best way to wash hands and prevent a cold
-* Habits often appear to make no difference until you cross a critical threshold and unlock a new level of performance.
-* Focus on systems instead of goals. E.g., instead of *publish 2 \*ACL papers this year*, try *read 1 new paper a week, try out 10 new ideas, and do 30 hours of deep work per week this year*.
-* Focus on progress and improvement against oneself instead of achieving goals, similar to Simon Sinek's philosophy of playing the infinite game.
+How strong the brain's capacity to tolerate pain is, that most of us only tap into 40% of our capabilities.
 
-* Most people change habits based on what they want to achieve, leading to outcome-based habits. You really want to have identity-based habits, which target who you want to become. The goal is not to read a book, but rather to *become* a reader. The goal is not to do creative things, but rather to *become* a creative person.
+***Atomic Habits* by James Clear.** This book, recommended by my friend Ashar, is about how small habits make a big difference. There were a lot of good points from the book:
+1. Habits are the compound interest of self-improvement.
+1. There is real power from *aggregation of marginal gains*. The British created a world-class cycling team by improving everything that goes into riding a bike by 1%: wearing heated overshorts to maintain ideal muscle temperature, testing fabrics in wind tunnel, finding massage gels to aid muscle recovery, finding best way to wash hands and prevent a cold, etc.
+1. Habits often appear to make no difference until you cross a critical threshold and unlock a new level of performance.
+1. Most people change habits based on what they want to achieve, leading to outcome-based habits. You really want to have *identity-based habits*, which target *who* you want to become. The goal is not to read a book, but rather to *become* a reader. The goal is not to do creative things, but rather to *become* a creative person.
+1. Focus on progress and improvement against oneself instead of achieving goals, similar to Simon Sinek's philosophy of playing the infinite game.
+1. Clear's laws of building better habits are (1) make it obvious, (2) make it attractive, (3) make it easy, and (4) make it satisfying.
+
+Some actions that I can take to improve my habits:
+1. **Systems.** Focus on systems instead of goals. E.g., instead of *publish 2 \*ACL papers this year*, try *read one new paper, try out two new ideas, and do thirty hours of deep work per week*.
+1. **Habit tracking.** Move one paper clip from a full jar to an empty jar for \{every hour of deep work, every lecture watched, every paper read\}. 
+1. **Accountability.** I made a list of three items to get done this quarter and told my brother to enforce a punishment if I do not complete them. 
+1. **Habit stacking.** Arrive to the gym ten minutes early and do Wim Hof breathing. Arrive to tennis ten minutes early and meditate. Take supplements after refilling water. Floss, mouthwash, and moisturize at the same time. 
 
 **Hygge.** To continue to learn more about my interest in Danish culture, I read two books, *Hygge: Cozy Living the Danish Way* by Astrid Neilson and *The Cozy Life* by Pia Edberg. Here's the definition provided by Neilsen: 
 
@@ -54,15 +62,15 @@ I like how Edberg describes hygge as not like a raging party, but rather a relax
 She also relates hygge to minimalism and urges us to focus on what is important.
 
 Some potential action items for me:
-* Have friends over for hygge gatherings instead of ragers. When they come over, ask if they want to eat or have any food, and have out candles, plants, baked goods, and wine.
-* Hygge at work: add personal items and plants to your desk at work.
-* Hygge scents: cinnamon, vanilla, pumpkin.
-* Some suggested hygge activities: have a bonfire, catch a sunset, have a picnic, take a walk in the snow at night, play board games, write a letter to someone you miss.
-* Reconnecting with the inner child.
+1. Have friends over for hygge gatherings instead of ragers. When they come over, ask if they want to eat or have any food, and have out candles, plants, baked goods, and wine.
+1. Hygge at work: add personal items and plants to your desk at work.
+1. Hygge scents: cinnamon, vanilla, pumpkin.
+1. Some suggested hygge activities: have a bonfire, catch a sunset, have a picnic, take a walk in the snow at night, play board games, write a letter to someone you miss.
+1. Reconnecting with my inner child.
 
 "You will never be free until you have no need to impress anyone."
 
-**Positivity by Phil Hellmuth.** Phil advocates for several things, notably:
+***Positivity* by Phil Hellmuth.** Phil advocates for several things, notably:
 1. Write down life goals and create a winning pyramid.
 1. Bathroom mirror your yearly goals and your blessings.
 1. Shed your hate.
@@ -79,6 +87,8 @@ Blessings:
 1. Great health for me.
 1. Great health for my family.
 1. Freedom to work on what I love.
+
+(Notably, most of my goals are not the types of goals that James Clear advocates for.)
 
 Making videos
 ------
@@ -99,8 +109,9 @@ Songs
 
 Youtubers
 ------
+- [Stevie Emerson](https://www.youtube.com/channel/UC2Ivwd5sPzeBPgn24NzM1lQ)
 - [Captain Sinbad](https://www.youtube.com/channel/UC8XKyvQ5Ne_bvYbgv8LaIeg)
 - [bald and bankrupt](https://www.youtube.com/watch?v=madplgRfebo&t=352s)
 - [serpentza](https://www.youtube.com/user/serpentza)
-* [Andrew Kirby](https://www.youtube.com/watch?v=q_xm5Weu3nE)
+- [Andrew Kirby](https://www.youtube.com/watch?v=q_xm5Weu3nE)
 
