--- a/_drafts/2020-9-15-blog-post-14.md
+++ b/_drafts/2020-9-15-blog-post-14.md
@@ -33,9 +33,31 @@ Cooking
 Reading
 ------
 
-***Can't Hurt Me* by David Goggins.** This book is the story of David Goggins, an ultra-marathoner and former US Navy SEAL who did 4,030 pull-ups in 17 hours, a world record. He tells the incredible story how he learned to embrace pain---to build a calloused mind, as he calls it---from being abused by his father to running with two broken shins and becoming a Navy Seal.
+***So Good They Can't Ignore You: Why Skills Trump Passion in the Quest for Work You Love* by Cal Newport.** 
+This book talked about Newport's own quest for fulfillment throughout his academic job search and fights heavily against the cliche "follow your passion" advice. 
+The main thesis he presents is to not pursue just something that you seem to be passionate about, but rather start by acquiring skills that will put you in a position for a successful career. 
+By first acquiring rare and valuable skills, you can achieve creativity, impact, and control---the traits that define great work. Several good points from his book:
+1. **The craftsman approach.** Regardless of what you do, approach your work like a true performer. Whereas most knowledge workers avoid deliberate practice, true performers---musicians, athletes, and chess players all engage in frequent deliberate practice.
+1. **Focus on what matters.** Don't think about how to apply the paper acceptance game or playing small tricks to get your paper accepted. Instead, just do really good research. Paper acceptances, collaborators, and jobs will come to you.
+1. **Non-craftsman work.** Some jobs are not good foundations for building working you love---these jobs present few opportunities to distinguish your work as valuable, focus on something you think is useless or bad for the world, or forces you to work with people you really dislike. Newport says he confidently deleted all emails from Wall Street headhunters for reason #2. 
+1. **Control trap.** Control acquired without career capital is not sustainable and is merely a shadow of real autonomy. Acquire career capital first, then go for control.
+1. **Finding mission.** Having a fulfilling career also requires a compelling mission. Starting by searching for a mission doesn't work, as you have to first get to the cutting edge in order to see where the missions become visible.
 
-How strong the brain's capacity to tolerate pain is, that most of us only tap into 40% of our capabilities.
+***Can't Hurt Me* by David Goggins.** 
+This book is the story of David Goggins, one of the hardest men alive. 
+Despite not knowing how to swim and barely being able to read, he became a Navy SEAL.
+With a congenital heart defect, he ran the 135-mile Badwater Ultramarathon.
+At 6'2 and 200 pounds, he did a record 4,030 pull-ups in 17 hours. 
+He did all this by learning to embrace pain and seek suffering---to build a calloused mind, as he calls it. 
+He believes that most of us only tap into 40% of our capabilities.
+His book is so inspiring that I hope to read it again in the future.
+
+Goggins takes an extreme mindset of detesting mediocrity.
+There's several motivational ideas here:
+- **Manage your mind.** Obstacles at work can be overcome with a calloused mind. During moments of pain, remember what you've been through to get to that point in your life.
+- **Raise the bar.** Whatever goal is set for you, surpass it by far.
+> If it's a boss, work around the clock. Get to work before them. Leave after they go home. When it's time to deliver, surpass their maximum expectations. Whoever you're dealing with, your goal is to make them watch you achieve what they could never have done themselves. 
+- If you have a new goal, work so hard at it that people think you're *crazy*. I want to publish two papers this year? F that goal, I want to publish more than anyone else in the field. 
 
 ***Atomic Habits* by James Clear.** This book, recommended by my friend Ashar, is about how small habits make a big difference. There were a lot of good points from the book:
 1. Habits are the compound interest of self-improvement.
@@ -76,17 +98,9 @@ Some potential action items for me:
 1. Shed your hate.
 1. Ignore external praise and look to your blessings instead.
 
-Here are my yearly goals (for the next academic year):
-1. Write two \*ACL papers.
-1. Work with a great advisor.
-1. Don't get sick.
-1. Bench press 225 pounds.
-1. Meditate daily.
+Here are my yearly goals (for the next academic year): write two \*ACL papers, work with a great advisor, don't get sick, bench press 225 pounds, meditate daily.
 
-Blessings:
-1. Great health for me.
-1. Great health for my family.
-1. Freedom to work on what I love.
+And my blessings: great health for me, great health for my family, and freedom to work on what I love.
 
 (Notably, most of my goals are not the types of goals that James Clear advocates for.)
 
@@ -98,6 +112,7 @@ Making videos
 
 Who are my heroes?
 ------
+* [Andrew Ng](https://www.youtube.com/watch?v=F1ka6a13S9I) says that a formula for making great researchers is reading papers and replicating results.
 
 Closing
 ------
