--- a/_drafts/2020-9-1-blog-post-14.md
+++ b/_drafts/2020-9-1-blog-post-14.md
@@ -1,18 +1,43 @@
 ---
 title: 'Summer after College (2020)'
-date: 2020-9-15
+date: 2020-9-1
 permalink: /posts/2020/9/blog-post-14/
 tags:
   - nlp
 ---
 
-Intro Sentence
+This summer, I worked on a couple of projects and played a bit of tennis. 
 
 Research
 ------
 
+**Data augmentation for triplet loss.** Data augmentation and triplet loss networks are both especially suitable for small datasets, and so I combined them in the context of text classification. I also proposed a curriculum learning scheme which posited that data augmentation can create an artificial range of example difficulty that can be leveraged for curriculum learning.
+
+**Curriculum learning for histopathology image classification.** 
+I helped out with my brother's project with Saeed. 
+The way that I see it, two challenges with curriculum learning are (1) we are not sure whether a curriculum exists in certain datasets, and (2) defining a curriculum is challenging. 
+Our project argued that histopathology image classification is a good scenario for curriculum learning.
+
+To learn, I also watched the first nine of Graham Neubig's [lectures](https://www.youtube.com/watch?v=D7o2Z1tAuQc&list=PL8PYTP1V4I8CJ7nMxMC8aXv8WqKYwj-aJ), read five chapters from Dan Jurafsky's [Speech and Language Processing](https://web.stanford.edu/~jurafsky/slp3/). 
+
 Health and Fitness
 ------
+
+**Tennis.** I played tennis whenever it wasn't raining. I was having some pain in my left wrist, and so I decided to switch to a one-handed backhand, which was probably the single biggest improvement for me since I started playing tennis. My backhand was always a weakness, and by switching to the one-handed I not only had a much more aesthetic shot, but I can handle high balls a little better, play approach shots more comfortably, hit a more concealed slice, and even put on some power at times. Moreover, because the one-handed backhand is less forgiving, I was forced to become more intentional about timing when I hit the ball, which also helped with my forehand. 
+
+**Benching.** I benched with my friend Abhishek two times a week, hitting 155 for 5x5 and 185 for 1 at 138 lbs (last time I was this strong, I weighed 152 lbs). 
+
+**Murph.** I was inspired by the Murph Challenge (1 mile run, 100 pull-ups, 200 push-ups, 300 squats, 1 mile run again), and did some workouts with my friends John and Prahlad to progress to it. 
+An example workout I did was 22 sets of (5 pull-ups, 10 push-ups, 15 sit-ups, 5 squats). 
+In Mid-August, Abhishek and I went for the Murph and I got a time of 54:55, much better than I had expected (12-minute mile; 33 minutes of pull-ups, push ups and squats; 9-minute mile).
+
+**Lasik.** I saw a LASIK opthalmologist on August 6, and was somehow convinced into doing the procedure the next day for (a discounted) $4000. 
+My eyes hurt that day and I was very scared but it got better after a couple of days.
+
+**Wisdom tooth extraction.** I got three wisdom teeth removed on Sep 1, and recovered after a couple of days. 
+
+**My nose.** I ended up seeing 3 different ENTs about snoring and struggling to breathe through my nose. 
+One suggested that I should get a septoplasty and that if I didn't get it I would probably need one later in life, but the two others said they were not sure that the septoplasty would improve my breathing and probably wouldn't help my snoring, and so I decided not to do anything.
 
 Meditation
 ------
@@ -25,15 +50,19 @@ It hasn't become obvious to me what the goal of mindfulness is exactly. Sam Harr
 When you're thinking about when am I going to get relief, what's the cure, how badly is my knee injured---when you're worrying about the future---, the automaticity of thought amplifies the negativity of the experience. Realize that suffering is the constant fear of having to experience something in the next moment.
 > Mindfulness tells us to focus on the present, allowing us to realize that the half-life of negative emotions is incredibly short.
 
+I probably meditated once or twice a week (not as much as I'd hoped), but I'm planning to meditate more in the coming months.
 
-
-Cooking
+Making videos
 ------
+* [Reviewing](https://www.youtube.com/watch?v=FcAK86N9j0Q) notes from my personal notebook (2017-2018)
 
 Reading
 ------
 
-***So Good They Can't Ignore You: Why Skills Trump Passion in the Quest for Work You Love* by Cal Newport.** 
+My mom got me a kindle for my birthday, and it was one of the best gifts ever. 
+
+### *So Good They Can't Ignore You: Why Skills Trump Passion in the Quest for Work You Love* by Cal Newport
+
 This book talked about Newport's own quest for fulfillment throughout his academic job search and fights heavily against the cliche "follow your passion" advice. 
 The main thesis he presents is to not pursue just something that you seem to be passionate about, but rather start by acquiring skills that will put you in a position for a successful career. 
 By first acquiring rare and valuable skills, you can achieve creativity, impact, and control---the traits that define great work. Several good points from his book:
@@ -43,7 +72,8 @@ By first acquiring rare and valuable skills, you can achieve creativity, impact,
 1. **Control trap.** Control acquired without career capital is not sustainable and is merely a shadow of real autonomy. Acquire career capital first, then go for control.
 1. **Finding mission.** Having a fulfilling career also requires a compelling mission. Starting by searching for a mission doesn't work, as you have to first get to the cutting edge in order to see where the missions become visible.
 
-***Can't Hurt Me* by David Goggins.** 
+### *Can't Hurt Me* by David Goggins
+
 This book is the story of David Goggins, one of the hardest men alive. 
 Despite not knowing how to swim and barely being able to read, he became a Navy SEAL.
 With a congenital heart defect, he ran the 135-mile Badwater Ultramarathon.
@@ -59,7 +89,9 @@ There's several motivational ideas here:
 > If it's a boss, work around the clock. Get to work before them. Leave after they go home. When it's time to deliver, surpass their maximum expectations. Whoever you're dealing with, your goal is to make them watch you achieve what they could never have done themselves. 
 - If you have a new goal, work so hard at it that people think you're *crazy*. I want to publish two papers this year? F that goal, I want to publish more than anyone else in the field. 
 
-***Atomic Habits* by James Clear.** This book, recommended by my friend Ashar, is about how small habits make a big difference. There were a lot of good points from the book:
+### *Atomic Habits* by James Clear
+
+ This book, recommended by my friend Ashar, is about how small habits make a big difference. There were a lot of good points from the book:
 1. Habits are the compound interest of self-improvement.
 1. There is real power from *aggregation of marginal gains*. The British created a world-class cycling team by improving everything that goes into riding a bike by 1%: wearing heated overshorts to maintain ideal muscle temperature, testing fabrics in wind tunnel, finding massage gels to aid muscle recovery, finding best way to wash hands and prevent a cold, etc.
 1. Habits often appear to make no difference until you cross a critical threshold and unlock a new level of performance.
@@ -73,7 +105,9 @@ Some actions that I can take to improve my habits:
 1. **Accountability.** I made a list of three items to get done this quarter and told my brother to enforce a punishment if I do not complete them. 
 1. **Habit stacking.** Arrive to the gym ten minutes early and do Wim Hof breathing. Arrive to tennis ten minutes early and meditate. Take supplements after refilling water. Floss, mouthwash, and moisturize at the same time. 
 
-**Hygge.** To continue to learn more about my interest in Danish culture, I read two books, *Hygge: Cozy Living the Danish Way* by Astrid Neilson and *The Cozy Life* by Pia Edberg. Here's the definition provided by Neilsen: 
+### Hygge
+
+To continue to learn more about my interest in Danish culture, I read two books, *Hygge: Cozy Living the Danish Way* by Astrid Neilson and *The Cozy Life* by Pia Edberg. Here's the definition provided by Neilsen: 
 
 > Hygge is about everyday togetherness that brings about that warm and fuzzy feeling inside. Hygge evokes a homey feeling of warmth, comfort safety, and love.
 
@@ -92,7 +126,9 @@ Some potential action items for me:
 
 "You will never be free until you have no need to impress anyone."
 
-***Positivity* by Phil Hellmuth.** Phil advocates for several things, notably:
+### *Positivity* by Phil Hellmuth
+
+Phil advocates for several things, notably:
 1. Write down life goals and create a winning pyramid.
 1. Bathroom mirror your yearly goals and your blessings.
 1. Shed your hate.
@@ -102,25 +138,26 @@ Here are my yearly goals (for the next academic year): write two \*ACL papers, w
 
 And my blessings: great health for me, great health for my family, and freedom to work on what I love.
 
-(Notably, most of my goals are not the types of goals that James Clear advocates for.)
+(Notably, most of these goals are not the types of goals that James Clear advocates for.)
 
-Making videos
-------
-* [Reviewing](https://www.youtube.com/watch?v=FcAK86N9j0Q) notes from my personal notebook (2017-2018)
-* Piano
-* Acting
+### *Know My Name* by Chanel Miller
+
+This book is a memoir about surviving sexual assault and was an eye-opening story for me.
+Miller speaks so honestly about feelings and emotions that, as a man, had frankly never crossed my mind. 
+I'd recommend this book for everyone, especially males.
 
 Who are my heroes?
 ------
 * [Andrew Ng](https://www.youtube.com/watch?v=F1ka6a13S9I) says that a formula for making great researchers is reading papers and replicating results.
+* [Lex Fridman](https://www.youtube.com/watch?v=0m3hGZvD-0s) has an inspiring daily routine.
 
 Closing
 ------
-
-
+I made good progress on my health and fitness this quarter, but still need to work on being more rigorous in pursuing the intellectual goals that I set for myself at the beginning.
 
 Songs
 ------
+- Dua Lipa
 
 Youtubers
 ------
