--- a/_drafts/2020-9-1-blog-post-14.md
+++ b/_drafts/2020-9-1-blog-post-14.md
@@ -18,12 +18,12 @@ I helped out with my brother's project with Saeed.
 The way that I see it, two challenges with curriculum learning are (1) we are not sure whether a curriculum exists in certain datasets, and (2) defining a curriculum is challenging. 
 Our project argued that histopathology image classification is a good scenario for curriculum learning.
 
-To learn, I also watched the first nine of Graham Neubig's [lectures](https://www.youtube.com/watch?v=D7o2Z1tAuQc&list=PL8PYTP1V4I8CJ7nMxMC8aXv8WqKYwj-aJ), read five chapters from Dan Jurafsky's [Speech and Language Processing](https://web.stanford.edu/~jurafsky/slp3/). 
+To learn, I also watched the first nine of Graham Neubig's [lectures](https://www.youtube.com/watch?v=D7o2Z1tAuQc&list=PL8PYTP1V4I8CJ7nMxMC8aXv8WqKYwj-aJ) and read five chapters from Dan Jurafsky's [Speech and Language Processing](https://web.stanford.edu/~jurafsky/slp3/). 
 
 Health and Fitness
 ------
 
-**Tennis.** I played tennis whenever it wasn't raining. I was having some pain in my left wrist, and so I decided to switch to a one-handed backhand, which was probably the single biggest improvement for me since I started playing tennis. My backhand was always a weakness, and by switching to the one-handed I not only had a much more aesthetic shot, but I can handle high balls a little better, play approach shots more comfortably, hit a more concealed slice, and even put on some power at times. Moreover, because the one-handed backhand is less forgiving, I was forced to become more intentional about timing when I hit the ball, which also helped with my forehand. 
+**Tennis.** I played tennis whenever it wasn't raining. I was having some pain in my left wrist, and so I decided to switch to a one-handed backhand, which was probably the single biggest improvement for me since I started playing tennis. My backhand was always a weakness, and by switching to the one-handed I not only had a much more aesthetic shot, but I can handle high balls a little better, play approach shots more comfortably, hit a more concealed slice, and even put on some power at times. Moreover, because the one-handed backhand is less forgiving, I was forced to think more intentionally about timing, which also helped with my forehand. 
 
 **Benching.** I benched with my friend Abhishek two times a week, hitting 155 for 5x5 and 185 for 1 at 138 lbs (last time I was this strong, I weighed 152 lbs). 
 
@@ -157,7 +157,7 @@ I made good progress on my health and fitness this quarter, but still need to wo
 
 Songs
 ------
-- Dua Lipa
+- Everything from Dua Lipa Essentials on iTunes
 
 Youtubers
 ------
