--- a/_posts/2020-9-1-blog-post-14.md
+++ b/_posts/2020-9-1-blog-post-14.md
@@ -4,6 +4,10 @@ date: 2020-9-1
 permalink: /posts/2020/9/blog-post-14/
 tags:
   - nlp
+  - research
+  - tennis
+  - meditation
+  - reading
 ---
 
 This summer, I worked on a couple of projects and played a bit of tennis. 
