update blog post

--- a/_posts/2020-9-1-blog-post-14.md
+++ b/_posts/2020-9-1-blog-post-14.md
@@ -43,6 +43,8 @@ My eyes hurt that day and I was very scared but it got better after a couple of 
 **My nose.** I ended up seeing 3 different ENTs about snoring and struggling to breathe through my nose. 
 One suggested that I should get a septoplasty and that if I didn't get it I would probably need one later in life, but the two others said they were not sure that the septoplasty would improve my breathing and probably wouldn't help my snoring, and so I decided not to do anything.
 
+**Cold showers.** As recommended by a couple of youtubers, I decided to take cold showers for all of this quarter. Being that it was the summer, it wasn't too bad. I definitely benefited from reduced time showering and less dry skin, but I didn't feel the mental boost that a lot of other people said they felt.
+
 Meditation
 ------
 It hasn't become obvious to me what the goal of mindfulness is exactly. Sam Harris puts it eloquently, which I would summarize as
