add tennis video

--- a/_drafts/2020-12-31-blog-post-15.md
+++ b/_drafts/2020-12-31-blog-post-15.md
@@ -36,6 +36,10 @@ Making videos
 Reading
 ------
 
+### *A Field Guide to Lucid Dreaming*
+
+### *Metaphors We Live By*
+
 Who are my heroes?
 ------
 
