--- a/_posts/2020-9-1-blog-post-14.md
+++ b/_posts/2020-9-1-blog-post-14.md
@@ -29,6 +29,9 @@ Health and Fitness
 
 **Tennis.** I played tennis whenever it wasn't raining. I was having some pain in my left wrist, and so I decided to switch to a one-handed backhand, which was probably the single biggest improvement for me since I started playing tennis. My backhand was always a weakness, and by switching to the one-handed I not only had a much more aesthetic shot, but I can handle high balls a little better, play approach shots more comfortably, hit a more concealed slice, and even put on some power at times. Moreover, because the one-handed backhand is less forgiving, I was forced to think more intentionally about timing, which also helped with my forehand. 
 
+<video src="/images/tennis2.mov" width="100%" autoplay loop muted></video>
+Hitting with Abhishek.
+
 **Benching.** I benched with my friend Abhishek two times a week, hitting 155 for 5x5 and 185 for 1 at 138 lbs (last time I was this strong, I weighed 152 lbs). 
 
 **Murph.** I was inspired by the Murph Challenge (1 mile run, 100 pull-ups, 200 push-ups, 300 squats, 1 mile run again), and did some workouts with my friends John and Prahlad to progress to it. 
