update blog post

--- a/_posts/2020-9-1-blog-post-14.md
+++ b/_posts/2020-9-1-blog-post-14.md
@@ -64,6 +64,10 @@ I probably meditated once or twice a week (not as much as I'd hoped), but I'm pl
 Making videos
 ------
 * [Reviewing](https://www.youtube.com/watch?v=FcAK86N9j0Q) notes from my personal notebook (2017-2018)
+* [Tennis with Abhishek](https://www.youtube.com/watch?v=XkJ4VCfmyeU&t=226s)
+* [Tennis with Allen](https://www.youtube.com/watch?v=l_yGYQ4AcNw)
+* [Tennis: Dingles](https://www.youtube.com/watch?v=KESAhvboTSA)
+* [Tennis: Team Singles](https://www.youtube.com/watch?v=T6iZTrfFMTw&t=856s)
 
 Reading
 ------
