--- a/_drafts/2020-12-31-blog-post-15.md
+++ b/_drafts/2020-12-31-blog-post-15.md
@@ -14,13 +14,21 @@ Intro sentence
 
 Research
 ------
-
+I got rejections for two papers from both AACL and COLING, which was hard to stomach and had me questioning what mistakes I had made with these two papers.
+Is it wrong to be upset by rejections and happy for acceptances when there is so much noise in reviewing?
+Perhaps this is a call for me to focus more on the systems than the results.
 
 
 Health and Fitness
 ------
 
 **Tennis.** 
+Some things for me to work on
+Better ready position, reading the ball, and recovery. I might not hit like a 5.0 player but I can have the ready position of one. 
+On volleys, contact the ball in front while moving forward. If the ball bounces close to your feet, get low and either take it early or off the bounce. 
+For serves, toss the ball higher.
+On backhands, make sure to keep the left arm bent on the backswing, and then flex the chest with my left hand pointing backwards when hitting the ball.
+Red light yellow light green light: a great exercise for reading the ball. 
 
 **Weightlifting.** 
 
@@ -32,6 +40,7 @@ Meditation
 
 Making videos
 ------
+- [Trying](https://www.youtube.com/watch?v=6GhjUHB8zpk) to do the Killing Eve "Billie" Monologue
 
 Reading
 ------
@@ -39,6 +48,12 @@ Reading
 ### *A Field Guide to Lucid Dreaming*
 
 ### *Metaphors We Live By*
+
+### *The Outsider* by Stephen King
+I hold Stephen King to high standards, and this book did not turn out the way I had hoped. 
+It starts with the murder of a boy with unmistakable evidence, but the man charged has a rock-solid alibi: what happens when an unstoppable force meets an immovable object?
+I thought there would be a real solution to the story, but it turned out to be supernatural. 
+Still, reading Stephen King has improved my writing vocabulary and creativity noticeably.
 
 Who are my heroes?
 ------
