refresh about me

--- a/_drafts/2020-12-31-blog-post-15.md
+++ b/_drafts/2020-12-31-blog-post-15.md
@@ -29,6 +29,8 @@ On volleys, contact the ball in front while moving forward. If the ball bounces 
 For serves, toss the ball higher.
 On backhands, make sure to keep the left arm bent on the backswing, and then flex the chest with my left hand pointing backwards when hitting the ball.
 Red light yellow light green light: a great exercise for reading the ball. 
+Forehand: instead of jumping up, transition body weight forward
+Ready stance: squat down much lower than you think you need to
 
 **Weightlifting.** 
 
@@ -54,6 +56,19 @@ I hold Stephen King to high standards, and this book did not turn out the way I 
 It starts with the murder of a boy with unmistakable evidence, but the man charged has a rock-solid alibi: what happens when an unstoppable force meets an immovable object?
 I thought there would be a real solution to the story, but it turned out to be supernatural. 
 Still, reading Stephen King has improved my writing vocabulary and creativity noticeably.
+
+### *The Third Door* by Alex Banayan
+This was a gripping story of how a college student went to interview Bill Gates, Tim Ferris, Larry King, and others about what they did early on in their careers to become successful. 
+The main door is the one with 99% waiting in line, the second door is for rich people and VIPs, and the third door is a more convoluted path and is how these people became successful. 
+Other than prioritizing relationship capital and connections over financial gain, it wasn't clear to me what exactly the third door is.
+However, the book was an inspiring tale of the hustle of entrepreneurs and gave some good insights on how to send emails to busy people.
+Some inspiring concepts nonetheless:
+1. Qi Lu, president of online services at Microsoft, hacked his sleep and sleeps for four hours a night. He spends the rest of the time working.
+1. Sugar Ray Leonard, professional boxer, calls the hidden reserve of strength that people have, what allows a mother to lift up a car off a trapped child, the Reservoir.
+1. Elliot Bisnow's five rules: never use your phone in a meeting, act like you belong, don't post on social media to impress people, don't break anyone's trust, adventures only happen to the adventurous.
+1. Warren Buffett reads everything carefully: reading the damn footnotes is Buffett's outlook on life.
+1. Become unattached to succeeding or failing, rather, focus on trying and growing.
+
 
 Who are my heroes?
 ------
